[package]
name            = "buncher"
version         = "0.6.0"
edition         = "2021"
authors         = [ "Miezhiko" ]
repository      = "https://github.com/Miezhiko/buncher"
license         = "AGPL-3.0-only"
readme          = "Readme.md"

[features]
default = []
zip = ["libc", "cmake"]

[dependencies]
anyhow          = "1.0"
globwalk        = "0.8"
typenum         = "1.17"
sha3            = "0.10.8"
async-fs        = "2.0"
indicatif       = "0.17"
futures         = "0.3"
futures-lite    = "2.0"

[dependencies.libc]
version = "0.2"
optional = true

[dependencies.clap]
version = "4.4"
features = ["derive", "color"]

[dependencies.tokio]
version = "1.33.0"
features = ["rt-multi-thread", "time", "rt", "signal", "macros"]

[dependencies.image]
git = "https://github.com/image-rs/image.git"
branch = "master"
features = [ "png", "jpeg", "tiff", "webp" ]

[build-dependencies.cmake]
version = "0.1.50"
optional = true

[profile.release]
opt-level = 3
overflow-checks = false
debug-assertions = false
lto = "fat"
