[package]
name            = "buncher"
version         = "0.6.4"
edition         = "2021"
authors         = [ "Miezhiko" ]
repository      = "https://github.com/Miezhiko/buncher"
license         = "AGPL-3.0-only"
readme          = "Readme.md"

[features]
default = []
zip = ["libc", "cmake"]

[dependencies]
anyhow          = "1.0"
globwalk        = "0.9"
typenum         = "1.17"
sha3            = "0.10.8"
async-fs        = "2.1"
indicatif       = "0.17"
futures         = "0.3"
futures-lite    = "2.2"

[dependencies.libc]
version = "0.2"
optional = true

[dependencies.clap]
version = "4.4"
default_features = false
features = ["derive", "color", "std", "help", "usage", "error-context", "suggestions"]

[dependencies.tokio]
version = "1.35.1"
default_features = false
features = ["rt-multi-thread", "time", "rt", "signal", "macros"]

[dependencies.image]
git = "https://github.com/image-rs/image.git"
branch = "master"
default_features = false
features = [ "png", "jpeg", "jpeg_rayon", "tiff", "webp" ]

[build-dependencies.cmake]
version = "0.1.50"
optional = true

[profile.release]
opt-level = 3
overflow-checks = false
debug-assertions = false
lto = "fat"
